[gd_scene load_steps=6 format=3 uid="uid://ce3xjl2bfcaac"]

[ext_resource type="Script" path="res://tuberias_varias.gd" id="1_i3ki1"]
[ext_resource type="PackedScene" uid="uid://ckurqvscw1uc" path="res://escenas/tuberia.tscn" id="1_ww34r"]
[ext_resource type="AudioStream" uid="uid://d0hc4da8gtqsk" path="res://assets/FlappyBirdR-resources/SFX/sfx_point.wav" id="3_3ame4"]
[ext_resource type="AudioStream" uid="uid://cupxj3kf80d56" path="res://assets/FlappyBirdR-resources/SFX/sfx_die.ogg" id="4_aeigw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm84b"]
size = Vector2(20, 160)

[node name="tuberias_varias" type="Node2D" groups=["tuberia"]]
position = Vector2(120, 256)
script = ExtResource("1_i3ki1")

[node name="Tuberia_1ARRIBA" parent="." instance=ExtResource("1_ww34r")]
position = Vector2(0, -392)
rotation = 6.28319

[node name="Tuberia_2ABAJO" parent="." instance=ExtResource("1_ww34r")]
position = Vector2(240, 392)
rotation = 3.14159

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(288, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(160, 8)
shape = SubResource("RectangleShape2D_pm84b")

[node name="AudioPunto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3ame4")

[node name="AudioGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_aeigw")

[connection signal="body_entered" from="Tuberia_1ARRIBA" to="." method="_on_tuberia_2abajo_pajaro"]
[connection signal="body_entered" from="Tuberia_2ABAJO" to="." method="_on_tuberia_2abajo_pajaro"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_exit"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
